# rules_oci

.github/workflows/: ci.yaml
e2e/smoke/: BUILD.bazel  MODULE.bazel
e2e/windows/: BUILD.bazel  WORKSPACE
examples/env_inheritance/: BUILD.bazel
examples/js/: BUILD.bazel
modules/rules_oci/0.3.4/: presubmit.yml  source.json
modules/rules_oci/0.3.4/patches/: docker.patch
oci/private/: BUILD.bazel  auth_config_locator.bzl  image.bzl  image.sh.tpl  tarball.bzl  tarball.sh.tpl
